src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__array_initialization_validation.snap
---
source: src/validation/tests/array_validation_test.rs
expression: "&diagnostics"
---
error: Array assignments must be surrounded with `[]`
  ┌─ <internal>:5:35
  │
5 │       arr2    : ARRAY[1..2] OF DINT := 1, 2;                        // Missing `[`
  │                                        ^^^^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
  ┌─ <internal>:6:41
  │
6 │       arr3    : ARRAY[1..2] OF myStruct := ((var1 := 1), (var1 := 2, var2 := (1, 2)));  // Missing `[`
  │                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
  ┌─ <internal>:6:74
  │
6 │       arr3    : ARRAY[1..2] OF myStruct := ((var1 := 1), (var1 := 2, var2 := (1, 2)));  // Missing `[`
  │                                                                               ^^^^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
  ┌─ <internal>:7:41
  │
7 │       arr4    : ARRAY[1..2] OF myStruct := ((var1 := 1), (var1 := 2, var2 := 1, 2));    // Missing `[`
  │                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
  ┌─ <internal>:7:73
  │
7 │       arr4    : ARRAY[1..2] OF myStruct := ((var1 := 1), (var1 := 2, var2 := 1, 2));    // Missing `[`
  │                                                                              ^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
  ┌─ <internal>:8:39
  │
8 │       arr_init  : ARRAY[1..2] OF DINT := (1, 2);                      // Missing `[`
  │                                           ^^^^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
   ┌─ <internal>:10:43
   │
10 │       y     : myStruct := (var1 := 1, var2 := 3, 4);                  // Missing `[`
   │                                               ^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
   ┌─ <internal>:12:11
   │
12 │       arr := 1, 2;                                      // Missing `[`
   │              ^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
   ┌─ <internal>:13:12
   │
13 │       arr := (1, 2);                                      // Missing `[`
   │               ^^^^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
   ┌─ <internal>:15:29
   │
15 │       x := (var1 := 1, var2 := 3, 4);                             // Missing `[`
   │                                ^ Array assignments must be surrounded with `[]`


